--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "psycopg>=3.3.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
     "ruff>=0.15.0",
+    "sqlalchemy>=2.0.46",
 ]
 
 [tool.ruff]
