--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 DATABASE_URL=postgresql+psycopg://USER:PASSWORD@HOST/DB?sslmode=require
-PORTAL_USERNAME=
-PORTAL_PASSWORD=
 APP_ENV=dev
 LOG_LEVEL=INFO
+
+PORTAL_URL=https://evotravelagent.com/session/new
+PORTAL_USERNAME=1111
+PORTAL_PASSWORD=password
+PORTAL_HEADLESS=true
