--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "playwright>=1.58.0",
     "psycopg[binary]>=3.3.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
@@ -37,5 +38,6 @@ where = ["src"]
 
 [tool.pytest.ini_options]
 markers = [
+  "unit: fast unit tests (no portal, no network)",
   "integration: tests that require external services like Neon"
 ]
