--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "psycopg[binary]>=3.3.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pyside6>=6.10.2",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
     "ruff>=0.15.0",
